fix navbar items overlapping when resizing window, fix menu navbar toggler on menu (it inherited red border from menu css)

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4333,7 +4333,7 @@ input[type="button"].btn-block {
   }
 }
 
-@media (min-width: 1530px) {
+@media (min-width: 1615px) {
   .navbar-expand-lg {
     -ms-flex-flow: row nowrap;
     flex-flow: row nowrap;
